--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ kotlin = "1.9.20"
 min_sdk_version = "23"
 target_sdk_version = "34"
 benmanesversion = "0.51.0"
+ktfmt = "0.18.0"
 
 [libraries]
 junit = { module = "junit:junit", version.ref = "junit" }
@@ -42,3 +43,4 @@ kgp = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kot
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 versions = { id = "com.github.ben-manes.versions", version.ref = "benmanesversion" }
+ktfmt = { id = "com.ncorti.ktfmt.gradle", version.ref = "ktfmt" }
